@@ -4832,7 +4832,7 @@ are recursive, just like the arguments &warnings-k;, &verbose-k;, and
    <entry>print the last error object.</entry></row>
  <row><entry><command>Inspect</command></entry>
    <entry><command>:i</command></entry>
-   <entry>inspect the last error object.</entry></row>
+   <entry>&inspect-my; the last error object.</entry></row>
  <row><entry><command>Mode-1</command></entry>
    <entry><command>:m1</command></entry>
    <entry>sets the current mode to 1: all the stack elements are considered.
